--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </section>
     <script>
 
-        const createItem
+        const createItem = () => {
+
+        }
         const section = document.querySelector('#main')
         section.innerHTML = 'Alo'
     </script>
