--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
+
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
+    <script>
+      dayjs.locale("ptt-br");
+    </script>
+
     <title>Planner</title>
     <style>
       html {
@@ -21,43 +28,60 @@
     <h1>Atividades</h1>
     <section id="main"></section>
     <script>
-
+      //object
       const activity = {
         name: "Almoço",
         date: new Date("2024-07-08 10:00"),
-        finalizada: false
+        finalizada: false,
+      };
 
-      }
-
+      //array
       const activities = [
         activity,
         {
-          name:'Academia em grupo',
+          name: "Academia em grupo",
           date: new Date("2024-07-09 10:00"),
-          finalizada: true
-
-        }
+          finalizada: false,
+        },
+        {
+          name: "Gamming session",
+          date: new Date("2024-07-09 10:00"),
+          finalizada: false,
+        },
       ];
 
+      //activities = [];
+
+      //arrow function
       const createItem = (activity) => {
-        let input = '<input type="checkbox" '
-        if (activity.finalizada == true) {
-          input += 'checked'
+        let input = '<input type="checkbox" ';
+        if (activity.finalizada) {
+          input += "checked";
         }
 
-        input += '>'
-        
+        input += ">";
+
         return `
         <div>
           ${input}
           <span>${activity.name} </span>
           <time>${activity.date} </time>
         </div>
-          `
+          `;
       };
 
-      const section = document.querySelector("#main");
-      section.innerHTML = createItem(activities[0]);
+      const updateList = () => {
+        const section = document.querySelector("#main");
+        //verificar se a minha lista está vazia
+        if (activities.length == 0) {
+          section.innerHTML = `<p> Nenhuma a tividade cadastrada! <p>`;
+        }
+
+        for (let activity of activities) {
+          section.innerHTML += createItem(activity);
+        }
+      };
+      updateList();
     </script>
   </body>
 </html>
